--- a/index.html
+++ b/index.html
@@ -1,37 +1,36 @@
+
 <!DOCTYPE html>
-<html lang="en">
+<html lang="kn">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Doddballapur Samachara</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Doddballapur Samachara</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
-    <div class="logo-title">
-      <img src="logo.png" alt="Doddballapur Samachara Logo" class="logo">
-      <h1>ದೊಡ್ಡಬಳ್ಳಾಪುರ ಸುದ್ದಿಸಂಚಾರ</h1>
-    </div>
-    <nav>
-      <a href="#">Home</a>
-      <a href="#">News</a>
-      <a href="#">Articles</a>
-      <a href="#">Contact</a>
-    </nav>
-  </header>
+    <header>
+        <img src="logo.png" alt="Logo" class="logo">
+        <h1>ದೊಡ್ಡಬಳ್ಳಾಪುರ ಸುದ್ದಿ ಸಂಪರ್ಕ</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">News</a></li>
+                <li><a href="#">Articles</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="news">
+            <h2>೨೬ ಜುಲೈರಂದು ಗಾಯಗೊಂಡ ವ್ಯಕ್ತಿಯೊಬ್ಬನನ್ನು ಇಬ್ಬರು ಸಹೋದರರು ರಕ್ಷಿಸಿದ್ದಾರೆ</h2>
+            <p>ಜುಲೈ 26 ರಂದು ದೊಡ್ಡಬಳ್ಳಾಪುರದಲ್ಲಿ ಒಬ್ಬ ವ್ಯಕ್ತಿ ಮಾರ್ಗದ ಮಧ್ಯದಲ್ಲಿ ಬಿದ್ದು ಗಾಯಗೊಂಡ ಸ್ಥಿತಿಯಲ್ಲಿ ಕಂಡುಬಂದರು. ಅವರ ಕುತ್ತಿಗೆಯಲ್ಲಿದ್ದ ಹೃದಯದ ಮುಖ್ಯ ರಕ್ತನಾಳಕ್ಕೆ ಗಾಯವಾಗಿತ್ತು. ಈ ವೇಳೆ ರಸ್ತೆಯಲ್ಲಿ ಹೋಗುತ್ತಿದ್ದ ಇಬ್ಬರು ಸಹೋದರರು ತಕ್ಷಣ ಪ್ರತಿಕ್ರಿಯಿಸಿ ಅವರನ್ನು ಆಸ್ಪತ್ರೆಗೆ ಕರೆದೊಯ್ದು ಪ್ರಾಣಾಪಾಯದಿಂದ ರಕ್ಷಿಸಿದರು. ನಂತರ ಅವರು ಅಧಿಕಾರಿಗಳಿಗೆ ಮಾಹಿತಿ ನೀಡಿದರು.</p>
 
-  <main>
-    <article class="news-article">
-      <h2>26 ಜುಲೈರಂದು ಸುಮಿತರಾದ ವ್ಯಕ್ತಿ ಶಂಕಿತವಾಗಿ ಮೃತನಾಗಿ ಕಂಡುಬಂದರು</h2>
-      <p>ಜನು 26 ರಂದು ದೊಡ್ಡಬಳ್ಳಾಪುರದ ಸಮೀಪದ ವ್ಯಕ್ತಿ ಶಂಕಿತ ಸ್ಥಿತಿಯಲ್ಲಿ ಮೃತನಾಗಿ ಪತ್ತೆಯಾದರು. ಇವರನ್ನು ಎರಡು ಜನ ಹಾದಿ ಹೊರಟು ನೋಡಿದ ತಕ್ಷಣ ಆಂಬುಲೆನ್ಸ್‌ಗೆ ಕರೆಮಾಡಿದರು.</p>
-
-      <h2>Man Found Dead Near Doddballapur Suspiciously</h2>
-      <p>A man was found dead under suspicious circumstances near Doddballapur today, July 26. He was discovered by two passersby who immediately notified an ambulance.</p>
-    </article>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 Doddballapur Samachara. All rights reserved.</p>
-  </footer>
+            <h3>Man Found Injured Near Doddaballapur — Saved by Two Brothers</h3>
+            <p>On July 26, a man was found injured on the road near Doddaballapur. He had sustained a serious injury to the main artery connecting to the heart in his neck. Two brothers who were passing by the area immediately responded, rushed him to the hospital, and saved his life. They also informed the local authorities.</p>
+        </section>
+    </main>
+    <footer>
+        <p>© 2025 Doddballapur Samachara. All rights reserved.</p>
+    </footer>
 </body>
 </html>
